[+] forwarding docker's pg port for dev purposes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - environment/api.dev.env
 
   db:
+    ports:
+      - 5432:5432
     image: postgres:alpine
     env_file:
       - environment/api.dev.env
